<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <Button
                    android:id="@+id/btnNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newItem" />

                <Button
                    android:id="@+id/btnLoad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loadItem" />

                <Button
                    android:id="@+id/btnRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/record" />

            </LinearLayout>

</LinearLayout>
